src/app/components/home-app/event-list/event-list.component.scss
// Copyright 2021 Carnegie Mellon University. All Rights Reserved.
// Released under a MIT (SEI)-style license. See LICENSE.md in the project root for license information.

@use "@angular/material" as mat;
@include mat.elevation-classes();

.elevate {
  @include mat.elevation(2);
}

.events-list-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-width: 300px;
  max-width: 1200px;
  width: 80%;
  margin: auto;
  overflow-x: hidden;
  box-shadow: 0 5px 5px -3px #0003, 0 8px 10px 1px #00000024, 0 3px 14px 2px #0000001f;
}

.table-container {
  overflow-y: auto;
  overflow-x: hidden;
  max-height: calc(100vh - 220px);
}

.mat-column-name {
  word-wrap: break-word !important;
  flex: 0 0 30% !important;
  min-width: 150px !important;
  max-width: 300px !important;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.mat-column-description {
  word-wrap: break-word !important;
  flex: 1 1 auto !important;
  min-width: 200px !important;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.mat-column-durationHours {
  word-wrap: break-word !important;
  flex: 0 0 200px !important;
  width: 200px !important;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.description-text {
  margin-left: 10px;
  margin-right: 10px;
  font-size: x-small;
  text-align: left;
}

.duration-text {
  margin-left: 10px;
  margin-right: 10px;
  font-size: medium;
  text-align: center;
}

.title-text {
  font-size: x-large;
  text-align: left;
  padding-left: 20px;
}

.icon-text-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-left: 20px;
  height: 90px;
}

.searchBox {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
  margin-left: auto !important;
  height: 60px !important;
}

.spinner {
  display: flex;
  justify-content: center;
  align-items: center;
}

.spinner {
  display: flex;
  justify-content: center;
  align-items: center;
}

.alloy-icon {
  transform: scale(2);
  width: 60px;
  color: var(--mat-sys-primary);
}

.link-text {
  text-align: left;
  font-size: large;

  a {
    color: var(--mat-sys-primary);
  }
}

